public/maage/css/src/styles.css
/* ... */
#maage-page .section-divider::before {
  left: -10px;
}

#maage-page .section-divider::after {
  right: -10px;
}

#maage-page .left.section-divider& {
  margin-left: 0px;
  margin-right: auto;

}

btn-guide-links {
  border: 1px solid var(--maage-gray-200);
  border-radius: 4px;
  color: var(--maage-text-default);
}

div.PerspectiveHeader > i.fa.PerspectiveIcon.icon-selection-Taxonomy {
  speak: none;
  -webkit-font-smoothing: antialiased;
  color: var(--maage-primary-500);
}

span.PerspectiveQuery > a.navigationLink.current {
  color: #436d58;
}

span.PerspectiveQuery > a.navigationLink:nth-child(1) {
  color: #436d58;
}

span.PerspectiveQuery > a.navigationLink:nth-child(2) {
  color: #26292c;
}

span.PerspectiveQuery > a.navigationLink:nth-child(3) {
  color: #26292c;
}

span.PerspectiveQuery > a.navigationLink:nth-child(4) {
  color: #26292c;
}

span.PerspectiveQuery > a.navigationLink:nth-child(5) {
  color: #26292c;
}

span.PerspectiveQuery > a.navigationLink:nth-child(6) {
  color: #26292c;
}

span.PerspectiveQuery > a.navigationLink:nth-child(7) {
  color: #26292c;
}

div.PerspectiveHeader > span.PerspectiveTotalCount {
  color: var(--maage-secondary-500);
  /* Prevent layout shift by ensuring a minimum width for the loading text */
  white-space: nowrap;
}

div#dijit_layout_TabContainer_0_tablist > div.dijitTabInner.dijitTabContent.dijitTab.dijitTabChecked.dijitChecked {
  z-index: 3;
  /* text-wrap-mode: nowrap; */ 
  white-space: nowrap;
  white-space-collapse: collapse;
  border-color: var(--maage-secondary-500) #b5bcc7 #b5bcc7;
  position: relative;
}

div.column-sub > div.section:nth-child(n) > h3.section-title.close {
  background-color: var(--maage-primary-400);
}

div.column-prime > div.section:nth-child(n) > h3.section-title.close {
  background-color: var(--maage-primary-400);
}

div.column-opt > div.section:nth-child(n) > h3.close.section-title {
  background-color: var(--maage-primary-400);
}

div.section:nth-child(3) > h3.section-title.close2x {
  background-color: var(--maage-primary-400);
}

div.column-sub a,
div.column-prime a,
div.column-opt a {
  color: var(--maage-secondary-700);
}

div.column-sub a:hover,
div.column-prime a:hover,
div.column-opt a:hover {
  color: var(--maage-secondary-700);
  opacity: 75%;
}

div.ActionButtonWrapper > div.ActionButton.fa.icon-info-circle.fa-2x {
  color: #fafafa;
  cursor: pointer;
  font-family: icomoon;
  font-size: 2em;
  margin: 2px 5px;
  border-style: initial;
  border-width: 0;
  font-size-adjust: none;
  padding: 0;
  text-align: center;
  visibility: visible;
}

div.ActionButtonWrapper > div.ActionButtonText {
  text-wrap-mode: wrap;
  color: #fafafa;
  font-size: 0.6em;
  margin: 0;
  text-align: center;
}

div.ActionBar.dijitBorderContainerNoGutter-child.dijitBorderContainerNoGutter-ActionBar.dijitBorderContainerNoGutterPane.dijitAlignRight {
  background-color: var(--maage-secondary-500);
}

div.selectedList {
  background-color: #ecc187;
  color: #212529;
  margin: 0 0 2px;
  min-height: 21px;
  text-align: center;
  /* text-wrap-mode: nowrap; */
  white-space: nowrap;
  padding: 0;
}

.ActionBar .ActionButtonWrapper {
  border: none;
}

.ActionButtonText {
  color: #1a1a1a !important;
}

.ActionBar .ActionButtonWrapper .ActionButton {
  color: #ffffff !important;
  font-size: 1.5em !important;
}

.ActionBar .ActionButtonWrapper .ActionButtonText {
  color: #ffffff !important;
  font-size: 10px !important;
}

div.ActionButton.fa-2x {
  color: #ffffff !important;
  z-index: 1000 !important;
  margin-top: 1px !important;
  height: 30px !important;
}

div.ActionButton.icon-microbetrace {
  background-image: url('/maage/img/microbetrace-icon.svg');
  background-size: 24px 24px;
  background-repeat: no-repeat;
  background-position: center;
  width: 30px !important;
  height: 30px !important;
  margin: 1px auto 0 auto;
  display: block;
}

.BrowserHeader div.ActionButton.icon-microbetrace {
  background-image: url('/maage/img/microbetrace-icon-dark.svg');
  background-size: 28px 28px;
  width: 36px !important;
  height: 36px !important;
  margin-top: 4px;
}

div#maage-page {
  width: 100%;
}

div#uniqName_18_0 > div:nth-child(1) > div.ActionButton.fa.icon-chevron-circle-right.fa-2x {
  height: 30px !important;
  width: 30px !important;
  display: block !important;
  color: red;
  left: 1px !important;
}

#maage-page .about-logo {
  width: 55%;
  height: auto;
}

.topMenuButton .workspace-nav-links {
  color: #344855;
  font-size: 14px;
}

.topMenuButton .workspace-nav-links:hover {
  opacity: 75%;
  text-decoration: underline;
}

div.relative.z-10.space-y-6 > div:nth-child(1) > h1.text-3xl.md/:text-4xl.lg\:text-5xl.font-bold.text-secondary-900.mb-4.font-poppins.leading-tight {
  font-weight: 600 !important;
  color: #212529 !important;
}

div.flex.items-center.mb-6 > h2.text-2xl.font-semibold.text-secondary-800.font-poppins {
  color: #212529;
}

div.flex.items-center > h2.text-2xl.font-semibold.text-[var(--maage-gray-800)].font-poppins {
  color: #212529;
}

div.flex.items-center.mb-5 > h2.text-xl.font-bold.text-gray-800.font-poppins {
  color: #212529;
  font-weight: 600;
}

div.flex.items-center.mb-6 > h2.text-xl.font-bold.text-gray-800.font-poppins {
  color: #212529;
  font-weight: 600;
}

div.flex.items-center.mb-4 > h2.text-xl.font-bold.text-gray-800.font-poppins {
  color: #212529;
  font-size: 1.5rem;
  font-weight: 600;
}

@media (min-width: 1024px) {
  div.relative.z-10.space-y-6 > div:nth-child(1) > h1.text-3xl.md/:text-4xl.lg\:text-5xl.font-bold.text-secondary-900.mb-4.font-poppins.leading-tight {
    color: #212529;
    font-weight: 600;
  }
}

bv-brc-home,
#bv-brc-page {
  font-family: 'Poppins', sans-serif;
}

#bv-brc-header-container {
  height: 100%;
}

#bv-brc-header {
  height: auto;
}

#bv-brc-header-container > div {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

#bv-brc-home .bv-brc-info {
  border-bottom: 4px solid var(--maage-primary-800);
}
/* ... */

